src/objects/Entity_Contract_Junction__c.object
<CustomObject>
    <description>This is a junction object between Entity and Contract, which looks up to both.</description>
    <fields>
        <fullName>Active__c</fullName>
        <description>Formula: If today&apos;s date is between the Start and End dates of the record, then the status should be Active and the checkbox is checked. Otherwise it means that this is Inactive.</description>
        <formula>(Start_Date__c &lt;= TODAY() &amp;&amp; End_Date__c &gt;= TODAY())
|| 
(Start_Date__c &lt;= TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: If today&apos;s date is between the Start and End dates of the record, then the status should be Active and the checkbox is checked. Otherwise it means that this is Inactive.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Contract object</description>
        <inlineHelpText>Lookup to Contract object</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Entity Contract Junction</relationshipLabel>
        <relationshipName>Entity_Contract_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Entity object</description>
        <inlineHelpText>Lookup to Entity object</inlineHelpText>
        <label>Entity</label>
        <referenceTo>Entity__c</referenceTo>
        <relationshipLabel>Entity Contract Junction</relationshipLabel>
        <relationshipName>Entity_Contract_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Entity Contract Junction</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Entity Contract Junction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entity Contract Junction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>